[gd_scene load_steps=7 format=1]

[ext_resource path="res://Themes/Menu.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/PlayerMenu.gd" type="Script" id=2]
[ext_resource path="res://Objects/ButtonRange.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/ColorPicker.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Objects/ResetDialog.tscn" type="PackedScene" id=6]

[node name="PlayerMenu" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1080.0
script/script = ExtResource( 2 )

[node name="PlayerTabContainer" type="TabContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 550.0
margin/top = 150.0
margin/right = 1370.0
margin/bottom = 720.0
tab_align = 0
tabs_visible = true

[node name="Upgrade" type="Tabs" parent="PlayerTabContainer"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2.0
margin/top = 66.0
margin/right = 2.0
margin/bottom = 2.0

[node name="DistanceLabel" type="Label" parent="PlayerTabContainer/Upgrade"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 12.0
margin/top = 20.0
margin/right = 227.0
margin/bottom = 90.0
text = "Distance"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DistanceRange" parent="PlayerTabContainer/Upgrade" instance=ExtResource( 3 )]

margin/left = 232.0
margin/top = 23.0
margin/right = 796.0
margin/bottom = 87.0

[node name="HeightLabel" type="Label" parent="PlayerTabContainer/Upgrade"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 12.0
margin/top = 105.0
margin/right = 227.0
margin/bottom = 175.0
text = "Height"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HeightRange" parent="PlayerTabContainer/Upgrade" instance=ExtResource( 3 )]

margin/left = 232.0
margin/top = 108.0
margin/right = 796.0
margin/bottom = 172.0

[node name="SpeedLabel" type="Label" parent="PlayerTabContainer/Upgrade"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 12.0
margin/top = 189.0
margin/right = 227.0
margin/bottom = 259.0
text = "Speed"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SpeedRange" parent="PlayerTabContainer/Upgrade" instance=ExtResource( 3 )]

margin/left = 232.0
margin/top = 192.0
margin/right = 796.0
margin/bottom = 256.0

[node name="ResetButton" type="Button" parent="PlayerTabContainer/Upgrade"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 200.0
margin/top = 350.0
margin/right = 200.0
margin/bottom = 420.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Reset Upgrades"
flat = false

[node name="Skin" type="Tabs" parent="PlayerTabContainer"]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2.0
margin/top = 66.0
margin/right = 2.0
margin/bottom = 2.0

[node name="ColorPicker" parent="PlayerTabContainer/Skin" instance=ExtResource( 4 )]

[node name="Hair" type="Tabs" parent="PlayerTabContainer"]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2.0
margin/top = 66.0
margin/right = 2.0
margin/bottom = 2.0

[node name="ColorPicker" parent="PlayerTabContainer/Hair" instance=ExtResource( 4 )]

[node name="Panel" type="Panel" parent="PlayerTabContainer/Hair"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 20.0
margin/right = 780.0
margin/bottom = 90.0

[node name="Label" type="Label" parent="PlayerTabContainer/Hair/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 150.0
margin/bottom = 70.0
text = "Style"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="StyleOptionButton" type="OptionButton" parent="PlayerTabContainer/Hair/Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 150.0
margin/top = 0.0
margin/right = 760.0
margin/bottom = 70.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="CancelButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 550.0
margin/top = 750.0
margin/right = 950.0
margin/bottom = 820.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Cancel"
flat = false

[node name="DoneButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 966.0
margin/top = 750.0
margin/right = 1366.0
margin/bottom = 820.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Done"
flat = false

[node name="Player" parent="." instance=ExtResource( 5 )]

transform/pos = Vector2( 450, 784 )
collision/layers = 0
collision/mask = 0

[node name="ResetDialog" parent="." instance=ExtResource( 6 )]

visibility/visible = false

[node name="Title" type="Label" parent="."]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 200.0
margin/top = 50.0
margin/right = -200.0
margin/bottom = 110.0
text = "Edit Player"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="value_changed" from="PlayerTabContainer/Upgrade/DistanceRange" to="." method="distanceRangeValueChanged"]

[connection signal="value_changed" from="PlayerTabContainer/Upgrade/HeightRange" to="." method="heightRangeValueChanged"]

[connection signal="value_changed" from="PlayerTabContainer/Upgrade/SpeedRange" to="." method="speedRangeValueChanged"]

[connection signal="pressed" from="PlayerTabContainer/Upgrade/ResetButton" to="." method="resetButtonPressed"]

[connection signal="color_changed" from="PlayerTabContainer/Skin/ColorPicker" to="." method="skinColorChanged"]

[connection signal="color_changed" from="PlayerTabContainer/Hair/ColorPicker" to="." method="hairColorChanged"]

[connection signal="item_selected" from="PlayerTabContainer/Hair/Panel/StyleOptionButton" to="." method="styleOptionButtonItemSelected"]

[connection signal="pressed" from="CancelButton" to="." method="cancelButtonPressed"]

[connection signal="pressed" from="DoneButton" to="." method="doneButtonPressed"]

[connection signal="confirmed" from="ResetDialog" to="." method="resetDialogConfirmed"]


